[package]
name = "svg_render_server"
version = "0.1.0"
authors = ["Denis Zhidkikh <me@deni.sh>"]
edition = "2018"

[dependencies]
actix-multipart = "0.4.0-beta.5"
actix-web = "4.0.0-beta.8"
serde = "1"
serde_json = "1"
chromiumoxide = { version = "0.3.1", features = ["tokio-runtime"], default-features = false}
chromiumoxide_cdp = "0.3.1"
tokio = "1"
futures = "0.3.15"